--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 .</li>
                             <li>Till date, 60655 cases have been confirmed, 52006 cases have been discharged and 1116 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 164 new cases are reported from 15 states- Lagos (64), FCT (26), Enugu (20), Kaduna (11), Oyo (11), Plateau (8), Ondo (7), Anambra (4), Nasarawa (3), Osun (3), Ebonyi (2), Imo (2), Benue (1), Katsina (1), Ogun (1)
+                            <li>The 225 new cases are reported from 11 states- Lagos (165), FCT (17), Rivers (13), Ogun (12), Niger (8), Delta (4), Ondo (2), Anambra (1), Edo (1), Ekiti (1), Kaduna (1)
                                 .
                             </li>
                         </ul>
