--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 13th of October 2020, 225 new confirmed cases and 1 death were recorded in Nigeria
+                            <li>On the 14th of October 2020, 179 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 60655 cases have been confirmed, 52006 cases have been discharged and 1116 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 60834 cases have been confirmed, 52143 cases have been discharged and 1116 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 225 new cases are reported from 11 states- Lagos (165), FCT (17), Rivers (13), Ogun (12), Niger (8), Delta (4), Ondo (2), Anambra (1), Edo (1), Ekiti (1), Kaduna (1)
+                            <li>The 179 new cases are reported from 13 states- Lagos (116), Anambra (20), FCT (9), Oyo (9), Rivers (9), Delta (3), Nasarawa (3), Edo (2), Kaduna (2), Ogun (2), Plateau (2), Ekiti (1), Osun (1)
                                 .
                             </li>
                         </ul>
