--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 14th of October 2020, 179 new confirmed cases were recorded in Nigeria
+                            <li>On the 15th of October 2020, 148 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 60834 cases have been confirmed, 52143 cases have been discharged and 1116 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 60982 cases have been confirmed, 52194 cases have been discharged and 1116 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 179 new cases are reported from 13 states- Lagos (116), Anambra (20), FCT (9), Oyo (9), Rivers (9), Delta (3), Nasarawa (3), Edo (2), Kaduna (2), Ogun (2), Plateau (2), Ekiti (1), Osun (1)
+                            <li>The 148 new cases are reported from 14 states- Lagos (66), FCT (25), Oyo (13), Plateau (11), Kaduna (7), Rivers (6), Ebonyi (5), Ekiti (4), Ogun (4), Imo (2), Ondo (2), Edo (1), Nasarawa (1), Taraba (1)
                                 .
                             </li>
                         </ul>
