--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 15th of October 2020, 148 new confirmed cases were recorded in Nigeria
+                            <li>On the 16th of October 2020, 212 new confirmed cases and 3 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 60982 cases have been confirmed, 52194 cases have been discharged and 1116 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 61194 cases have been confirmed, 52304 cases have been discharged and 1119 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 148 new cases are reported from 14 states- Lagos (66), FCT (25), Oyo (13), Plateau (11), Kaduna (7), Rivers (6), Ebonyi (5), Ekiti (4), Ogun (4), Imo (2), Ondo (2), Edo (1), Nasarawa (1), Taraba (1)
+                            <li>The 212 new cases are reported from 8 states- Lagos (85), Oyo (72), FCT (21), Ogun (11), Plateau (11), Katsina (6), Kaduna (5), Osun (1)
                                 .
                             </li>
                         </ul>
