--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 .</li>
                             <li>Till date, 61307 cases have been confirmed, 56557 cases have been discharged and 1123 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 212 new cases are reported from 8 states- Lagos (85), Oyo (72), FCT (21), Ogun (11), Plateau (11), Katsina (6), Kaduna (5), Osun (1)
+                            <li>The 113 new cases are reported from 14 states- Lagos (37), Kaduna (16), Ogun (11), Plateau (11), Taraba (8), Rivers (7), FCT (6), Enugu (4), Niger (4), Edo (3), Delta (2), Imo (2), Benue (1), Kano (1)
                                 .
                             </li>
                         </ul>
