--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 17th of October 2020, 113 new confirmed cases and 4 deaths were recorded in Nigeria
+                            <li>On the 19th of October 2020, 118 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 61307 cases have been confirmed, 56557 cases have been discharged and 1123 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 61558 cases have been confirmed, 56697 cases have been discharged and 1125 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 113 new cases are reported from 14 states- Lagos (37), Kaduna (16), Ogun (11), Plateau (11), Taraba (8), Rivers (7), FCT (6), Enugu (4), Niger (4), Edo (3), Delta (2), Imo (2), Benue (1), Kano (1)
+                            <li>The 118 new cases are reported from 10 states - Lagos (51), Rivers (26), Imo (12), Osun (8), Plateau (6), FCT (5), Kaduna (4), Ogun (3), Edo (2), Niger (1)
                                 .
                             </li>
                         </ul>
