--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 19th of October 2020, 118 new confirmed cases were recorded in Nigeria
+                            <li>On the 22nd of October 2020, 138 new confirmed cases and 2 deaths were recorded in Nigeria
                                 .</li>
                             <li>Till date, 61558 cases have been confirmed, 56697 cases have been discharged and 1125 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
