--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                         <ul>
                             <li>On the 22nd of October 2020, 138 new confirmed cases and 2 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 61558 cases have been confirmed, 56697 cases have been discharged and 1125 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 61805 cases have been confirmed, 56985 cases have been discharged and 1127 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 118 new cases are reported from 10 states - Lagos (51), Rivers (26), Imo (12), Osun (8), Plateau (6), FCT (5), Kaduna (4), Ogun (3), Edo (2), Niger (1)
+                            <li>The 138 new cases are reported from 13 states - Katsina (44), Lagos (35),Kwara (15), Kaduna (13), Plateau (7), Imo (6), Adamawa (5) Rivers (4), Yobe (3), Ogun (2), Oyo (2), Osun (1), FCT (1)
                                 .
                             </li>
                         </ul>
