--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 22nd of October 2020, 138 new confirmed cases and 2 deaths were recorded in Nigeria
+                            <li>On the 23rd of October 2020, 77 new confirmed cases and 2 deaths were recorded in Nigeria
                                 .</li>
                             <li>Till date, 61805 cases have been confirmed, 56985 cases have been discharged and 1127 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
