--- a/index.html
+++ b/index.html
@@ -71,8 +71,7 @@
                                 .</li>
                             <li>Till date, 61882 cases have been confirmed, 57190 cases have been discharged and 1129 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 138 new cases are reported from 13 states - Katsina (44), Lagos (35),Kwara (15), Kaduna (13), Plateau (7), Imo (6), Adamawa (5) Rivers (4), Yobe (3), Ogun (2), Oyo (2), Osun (1), FCT (1)
-                                .
+                            <li>The 77 new cases are reported from 11 states - Lagos (21), Kaduna (20), Rivers (19), FCT (4), Osun (3), Ondo (2), Sokoto (2), Kwara (2), Benue (2), Imo (1), Ogun (1).
                             </li>
                         </ul>
                     </div>
