--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
                         <ul>
                             <li>On the 25th of October 2020, 62 new confirmed cases and 1 death was recorded in Nigeria
                                 .</li>
-                            <li>Till date, 61882 cases have been confirmed, 57190 cases have been discharged and 1129 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 61992 cases have been confirmed, 57465 cases have been discharged and 1130 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 77 new cases are reported from 11 states - Lagos (21), Kaduna (20), Rivers (19), FCT (4), Osun (3), Ondo (2), Sokoto (2), Kwara (2), Benue (2), Imo (1), Ogun (1).
+                            <li>The 62 new cases are reported from 11 states- Taraba (18), Ogun (15), FCT (6), Kaduna (6), Katsina (4), Ondo (4), Ekiti (3), Rivers (3), Kano (1), Osun (1), Sokoto (1).
                             </li>
                         </ul>
                     </div>
