--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 25th of October 2020, 62 new confirmed cases and 1 death was recorded in Nigeria
+                            <li>On the 26th of October 2020, 119 new confirmed cases and 2 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 61992 cases have been confirmed, 57465 cases have been discharged and 1130 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 62111 cases have been confirmed, 57571 cases have been discharged and 1132 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 62 new cases are reported from 11 states- Taraba (18), Ogun (15), FCT (6), Kaduna (6), Katsina (4), Ondo (4), Ekiti (3), Rivers (3), Kano (1), Osun (1), Sokoto (1).
+                            <li>The 119 new cases are reported from 6 states- Lagos (77), FCT (26), Plateau (9), Edo (4), Oyo (2), Nasarawa (1).
                             </li>
                         </ul>
                     </div>
