--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 27th of October 2020, 113 new confirmed cases and 3 deaths were recorded in Nigeria
+                            <li>On the 29th of October 2020, 150 new confirmed cases and 2 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 62224 cases have been confirmed, 57916 cases have been discharged and 1135 deaths have been recorded in 36 states and the Federal Capital Territory
+                            <li>Till date, 62521 cases have been confirmed, 58249 cases have been discharged and 1141 deaths have been recorded in 36 states and the Federal Capital Territory
                                 .</li>
-                            <li>The 113 new cases are reported from 12 states- Lagos (51), FCT (15), Plateau (11), Kaduna (8), Oyo (8), Rivers (8), Ogun (4), Edo (2), Imo (2), Kwara (2), Delta (1), Kano (1).
+                            <li>The 150 new cases are reported from 9 states- Lagos (89), Rivers (19), Ogun (11), Bayelsa (9), Kaduna (8), Plateau (8), Taraba (3), Osun (2), Delta (1).
                             </li>
                         </ul>
                     </div>
