--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 29th of October 2020, 150 new confirmed cases and 2 deaths were recorded in Nigeria
+                            <li>On the 31st of October 2020, 162 new confirmed cases were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 62521 cases have been confirmed, 58249 cases have been discharged and 1141 deaths have been recorded in 36 states and the Federal Capital Territory
-                                .</li>
-                            <li>The 150 new cases are reported from 9 states- Lagos (89), Rivers (19), Ogun (11), Bayelsa (9), Kaduna (8), Plateau (8), Taraba (3), Osun (2), Delta (1).
+                            <li>Till date, 62853 cases have been confirmed, 58675 cases have been discharged and 1144 deaths have been recorded in 36 states and the Federal Capital Territory.
+                            </li>
+                            <li>The 162 new cases are reported from 14 states- Gombe (54), FCT (35), Lagos (26), Ogun (12), Plateau (10), Rivers (10), Kaduna (4), Ekiti (3), Edo (2), Osun (2), Bayelsa (1), Imo (1), Ondo (1), Oyo (1).
                             </li>
                         </ul>
                     </div>
