--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 31st of October 2020, 162 new confirmed cases were recorded in Nigeria
+                            <li>On the 1st of November 2020, 111 new confirmed cases and 2 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 62853 cases have been confirmed, 58675 cases have been discharged and 1144 deaths have been recorded in 36 states and the Federal Capital Territory.
+                            <li>Till date, 62964 cases have been confirmed, 58790 cases have been discharged and 1146 deaths have been recorded in 36 states and the Federal Capital Territory.
                             </li>
-                            <li>The 162 new cases are reported from 14 states- Gombe (54), FCT (35), Lagos (26), Ogun (12), Plateau (10), Rivers (10), Kaduna (4), Ekiti (3), Edo (2), Osun (2), Bayelsa (1), Imo (1), Ondo (1), Oyo (1).
+                            <li>The 111 new cases are reported from 8 states- Lagos (49), FCT (30), Rivers (11), Plateau (10), Ogun (4), Kaduna (3), Oyo (3), Osun (1).
                             </li>
                         </ul>
                     </div>
