--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 1st of November 2020, 111 new confirmed cases and 2 deaths were recorded in Nigeria
+                            <li>On the 2nd of November 2020, 72 new confirmed cases and 1 death was recorded in Nigeria
                                 .</li>
-                            <li>Till date, 62964 cases have been confirmed, 58790 cases have been discharged and 1146 deaths have been recorded in 36 states and the Federal Capital Territory.
+                            <li>Till date, 63036 cases have been confirmed, 59328 cases have been discharged and 1147 deaths have been recorded in 36 states and the Federal Capital Territory.
                             </li>
-                            <li>The 111 new cases are reported from 8 states- Lagos (49), FCT (30), Rivers (11), Plateau (10), Ogun (4), Kaduna (3), Oyo (3), Osun (1).
+                            <li>The 72 new cases are reported from 9 states- Lagos (51), FCT (6), Ogun (4), Kaduna (3), Niger (2), Ondo (2), Plateau (2), Katsina (1), Oyo (1).
                             </li>
                         </ul>
                     </div>
