--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 3rd of November 2020, 137 new confirmed cases and 4 deaths were recorded in Nigeria
+                            <li>On the 4th of November 2020, 155 new confirmed cases and 4 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 63173 cases have been confirmed, 59634 cases have been discharged and 1151 deaths have been recorded in 36 states and the Federal Capital Territory.
+                            <li>Till date, 63328 cases have been confirmed, 59675 cases have been discharged and 1155 deaths have been recorded in 36 states and the Federal Capital Territory.
                             </li>
-                            <li>The 137 new cases are reported from 16 states- Lagos (60), Abia (21), FCT (18), Rivers (13), Kaduna (5), Oyo (4), Edo (3), Delta (2), Imo (2), Kano (2), Ogun (2), Bauchi (1), Gombe (1), Nasarawa (1), Niger (1), Osun (1).
+                            <li>The 155 new cases are reported from 10 states- Lagos (85), FCT (23), Ondo (18), Ogun (8), Kaduna (5), Oyo (5), Taraba (5), Kano (3), Rivers (2), Bauchi (1).
                             </li>
                         </ul>
                     </div>
