--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 4th of November 2020, 155 new confirmed cases and 4 deaths were recorded in Nigeria
+                            <li>On the 9th of November 2020, 94 new confirmed cases and 4 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 63328 cases have been confirmed, 59675 cases have been discharged and 1155 deaths have been recorded in 36 states and the Federal Capital Territory.
+                            <li>Till date, 64184 cases have been confirmed, 60069 cases have been discharged and 1158 deaths have been recorded in 36 states and the Federal Capital Territory.
                             </li>
-                            <li>The 155 new cases are reported from 10 states- Lagos (85), FCT (23), Ondo (18), Ogun (8), Kaduna (5), Oyo (5), Taraba (5), Kano (3), Rivers (2), Bauchi (1).
+                            <li>The 94 new cases are reported from 7 states- Lagos (50), FCT (24), Kwara (9), Edo (4), Kaduna (3), Ondo (2) and Plateau (2).
                             </li>
                         </ul>
                     </div>
