--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 9th of November 2020, 94 new confirmed cases and 4 deaths were recorded in Nigeria
+                            <li>On the 10th of November 2020, 152 new confirmed cases and 2 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 64184 cases have been confirmed, 60069 cases have been discharged and 1158 deaths have been recorded in 36 states and the Federal Capital Territory.
+                            <li>Till date, 64336 cases have been confirmed, 60333 cases have been discharged and 1160 deaths have been recorded in 36 states and the Federal Capital Territory.
                             </li>
-                            <li>The 94 new cases are reported from 7 states- Lagos (50), FCT (24), Kwara (9), Edo (4), Kaduna (3), Ondo (2) and Plateau (2).
+                            <li>The 152 new cases are reported from 9 states- Lagos (93), FCT (21), Oyo (15), Rivers (11), Bauchi (7), Kwara (2), Bayelsa (1), Edo (1), Plateau (1).
                             </li>
                         </ul>
                     </div>
