--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 10th of November 2020, 152 new confirmed cases and 2 deaths were recorded in Nigeria
+                            <li>On the 11th of November 2020, 180 new confirmed cases and 2 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 64336 cases have been confirmed, 60333 cases have been discharged and 1160 deaths have been recorded in 36 states and the Federal Capital Territory.
+                            <li>Till date, 64516 cases have been confirmed, 60737 cases have been discharged and 1162 deaths have been recorded in 36 states and the Federal Capital Territory.
                             </li>
-                            <li>The 152 new cases are reported from 9 states- Lagos (93), FCT (21), Oyo (15), Rivers (11), Bauchi (7), Kwara (2), Bayelsa (1), Edo (1), Plateau (1).
+                            <li>The 180 new cases are reported from 9 states- Lagos (74), Oyo (41), FCT (19), Kaduna (19), Bauchi (12), Ogun (7), Rivers (4), Cross River (2) and Edo (2).
                             </li>
                         </ul>
                     </div>
