--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 11th of November 2020, 180 new confirmed cases and 2 deaths were recorded in Nigeria
+                            <li>On the 13th of November 2020, 156 new confirmed cases and 1 death was recorded in Nigeria
                                 .</li>
-                            <li>Till date, 64516 cases have been confirmed, 60737 cases have been discharged and 1162 deaths have been recorded in 36 states and the Federal Capital Territory.
+                            <li>Till date, 64884 cases have been confirmed, 60936 cases have been discharged and 1163 deaths have been recorded in 36 states and the Federal Capital Territory.
                             </li>
-                            <li>The 180 new cases are reported from 9 states- Lagos (74), Oyo (41), FCT (19), Kaduna (19), Bauchi (12), Ogun (7), Rivers (4), Cross River (2) and Edo (2).
+                            <li>The 156 new cases are reported from 11 states- Lagos (70), FCT (22), Kaduna (18), Rivers (15), Plateau (11), Ogun (10), Bauchi (3), Katsina (3), Kano (2), Ekiti (1) and Osun (1).
                             </li>
                         </ul>
                     </div>
