--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 13th of November 2020, 156 new confirmed cases and 1 death was recorded in Nigeria
+                            <li>On the 1st of December 2020, 281 new confirmed cases and 3 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 64884 cases have been confirmed, 60936 cases have been discharged and 1163 deaths have been recorded in 36 states and the Federal Capital Territory.
+                            <li>Till date, 67,838 cases have been confirmed, 63,430 cases have been discharged and 1,176 deaths have been recorded in 36 states and the Federal Capital Territory.
                             </li>
-                            <li>The 156 new cases are reported from 11 states- Lagos (70), FCT (22), Kaduna (18), Rivers (15), Plateau (11), Ogun (10), Bauchi (3), Katsina (3), Kano (2), Ekiti (1) and Osun (1).
+                            <li>The 281 new cases are reported from 13 states- Lagos (123), FCT (64), Kaduna (38), Imo (15), Rivers (11), Plateau (8), Ogun (5), Bayelsa (4), Kwara (4), Bauchi (3), Edo (3), Kano (2) and Osun (1).
                             </li>
                         </ul>
                     </div>
