--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 1st of December 2020, 281 new confirmed cases and 3 deaths were recorded in Nigeria
+                            <li>On the 21st of December 2020, 356 new confirmed cases and 6 deaths were recorded in Nigeria.
                                 .</li>
-                            <li>Till date, 67,838 cases have been confirmed, 63,430 cases have been discharged and 1,176 deaths have been recorded in 36 states and the Federal Capital Territory.
+                            <li>Till date, 78,790 cases have been confirmed, 68,483 cases have been discharged and 1,227 deaths have been recorded in 36 states and the Federal Capital Territory.
                             </li>
-                            <li>The 281 new cases are reported from 13 states- Lagos (123), FCT (64), Kaduna (38), Imo (15), Rivers (11), Plateau (8), Ogun (5), Bayelsa (4), Kwara (4), Bauchi (3), Edo (3), Kano (2) and Osun (1).
+                            <li>The 356 new cases are reported from 15 states- FCT (79), Lagos (59), Kaduna (56), Katsina (37), Nasarawa (30), Kano (25), Edo (18), Gombe (14), Kebbi (12) Akwa Ibom (7), Rivers (7), Sokoto (7), Abia (3), Ogun (1) and Cross River (1).
                             </li>
                         </ul>
                     </div>
