--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 21st of December 2020, 356 new confirmed cases and 6 deaths were recorded in Nigeria.
+                            <li>On the 25th of December 2020, 712 new confirmed cases and 4 deaths were recorded in Nigeria
                                 .</li>
-                            <li>Till date, 78,790 cases have been confirmed, 68,483 cases have been discharged and 1,227 deaths have been recorded in 36 states and the Federal Capital Territory.
+                            <li>Till date, 82747 cases have been confirmed, 70239 cases have been discharged and 1246 deaths have been recorded in 36 states and the Federal Capital Territory.
                             </li>
-                            <li>The 356 new cases are reported from 15 states- FCT (79), Lagos (59), Kaduna (56), Katsina (37), Nasarawa (30), Kano (25), Edo (18), Gombe (14), Kebbi (12) Akwa Ibom (7), Rivers (7), Sokoto (7), Abia (3), Ogun (1) and Cross River (1).
+                            <li>The 712 new cases are reported from 20 states- Lagos (388), FCT (77), Kwara (39), Katsina (35), Bauchi (33), Plateau (22), Ogun (18), Akwa Ibom (16), Delta (13), Kaduna (12), Osun (12), Yobe (11), Sokoto (10), Kebbi (8), Enugu (6), Edo (5), Ondo (3), Niger (2), Kano (1), and Oyo (1).
                             </li>
                         </ul>
                     </div>
