Refactor the codebase, fixed a bug of adding a comma to numbers and edited README file to change a Live Demo link.

--- a/index.html
+++ b/index.html
@@ -67,11 +67,14 @@
                     <div id="highlight">
                         <h2>Highlights</h2>
                         <ul>
-                            <li>On the 25th of December 2020, 712 new confirmed cases and 4 deaths were recorded in Nigeria
-                                .</li>
-                            <li>Till date, 82747 cases have been confirmed, 70239 cases have been discharged and 1246 deaths have been recorded in 36 states and the Federal Capital Territory.
+                            <li>
+                                On the 7th of September 2021, 597 new confirmed cases and 17 deaths were recorded in Nigeria.
                             </li>
-                            <li>The 712 new cases are reported from 20 states- Lagos (388), FCT (77), Kwara (39), Katsina (35), Bauchi (33), Plateau (22), Ogun (18), Akwa Ibom (16), Delta (13), Kaduna (12), Osun (12), Yobe (11), Sokoto (10), Kebbi (8), Enugu (6), Edo (5), Ondo (3), Niger (2), Kano (1), and Oyo (1).
+                            <li>
+                                Till date, 196487 cases have been confirmed, 185159 cases have been discharged and 2573 deaths have been recorded in 36 states and the Federal Capital Territory.
+                            </li>
+                            <li>
+                                The 597 new cases are reported from 14 states- Lagos (204), Rivers (89), Edo (65), FCT (50), Oyo (47), Enugu (46), Ekiti (24), Cross River (17), Delta (15), Gombe (15), Osun (12), Plateau (6), Benue (5) and Kano (2).
                             </li>
                         </ul>
                     </div>
@@ -80,7 +83,7 @@
                 <!------------------EMBEDDING NCDC TWEETS----------------------->
                 <div id="tweetsMainDiv">                   
                     <div class="tweet">
-                        <a class="twitter-timeline" data-width="350" data-height="550" data-dnt="true" href="https://twitter.com/NCDCgov?ref_src=twsrc%5Etfw">Tweets by NCDCgov</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <a class="twitter-timeline" data-width="350" data-height="550" data-dnt="true" href="https://twitter.com/NCDCgov?ref_src=twsrc%5Etfw">Tweets by NCDCgov</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8">'Tweets Error'</script>
                     </div>                  
                 </div>
             </div>
